Fix particle effect on scroll + send behind everything + animate from bottom to top

--- a/src/client/app/shared/particle-effect/particle-effect/particle-effect.component.scss
+++ b/src/client/app/shared/particle-effect/particle-effect/particle-effect.component.scss
@@ -1,10 +1,11 @@
 #container {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100vh;
 	overflow: hidden;
+	z-index: -1;
 
 	::ng-deep .particle {
 		border-radius: 50%;
@@ -16,7 +17,7 @@
 
 @keyframes move {
 	0% {
-		transform: translateY(0);
+		transform: translateY(45vw);
 		opacity: 0;
 	}
 
@@ -26,7 +27,7 @@
 	}
 
 	100% {
-		transform: translateY(45vw);
+		transform: translateY(0);
 		opacity: 0;
 	}
 }
